# shadPS4-pkg-unpacker

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  REUSE.toml
documents/: building-linux.md
pkg_unpacker/: CMakeLists.txt  README.md  main.cpp  scm_rev.cpp  tracy_stub.hpp  trp_stub.cpp
src/common/: config.cpp  config.h
src/core/: module.cpp
src/core/file_format/: pkg.cpp  pkg.h  trp.cpp
src/core/file_sys/devices/: random_device.cpp  srandom_device.cpp  urandom_device.cpp
src/core/libraries/libc_internal/: libc_internal_math.cpp
src/qt_gui/: gui_context_menus.h  main_window.cpp  main_window.h  main_window_ui.h  settings_dialog.cpp  settings_dialog.ui
src/tools/: pkg_extractor.cpp
